# Calculator-Project

./: .gitignore  Polyfunc.cpp  Polyfunc.h  README.md  graph_calc.cpp  graph_calc.h
.github/workflows/: cmake-single-platform.yml
BaseCalculator/: READTHIS.txt  calc_base.cpp  calc_base.h  calculator.cpp  calculator.h
ConversionsCode/: AngleConversion.cpp  AngleConversion.h  LengthUnitConversion.cpp  LengthUnitConversion.h  TempConversion.cpp  TempConversion.h
GraphingCode/: graph_calc.cpp  graph_calc.h
GraphingFunction/: Graph_calc.cpp  Graph_calc.h  Polyfunc.cpp  Polyfunc.h
StatisticsCode/: CalcStats.cpp  CalcStats.h  Calculator.cpp  Calculator.h  Menu.cpp  Menu.h  Stats.cpp  Stats.h  menu.cpp
UICode/: BaseCalcFrame.cpp  BaseCalcFrame.h  CMakeLists.txt  GrapherFrame.cpp  GrapherFrame.h  ModulesFrame.cpp  ModulesFrame.h  StatFrame.cpp  StatFrame.h  UnitConversionFrame.cpp  UnitConversionFrame.h  VariableSolverFrame.cpp  VariableSolverFrame.h  main.cpp
Variable/: QuadInequalities.cpp  QuadInequalities.h  SimplifyExpression.cpp  SimplifyExpression.h  Source.cpp
mathbasics/: Calculator.h  Menu.cpp  Menu.h  main.cpp
